--- a/.github/workflows/cypress-teste.yml
+++ b/.github/workflows/cypress-teste.yml
@@ -24,3 +24,12 @@ jobs:
 
             - name: Executar testes
               run: npm test
+
+            - name: Gerar relatório do Allure
+              run: npm run report-ci
+
+            - name: Publicar relatório no GitHub Pages
+              uses: peaceiris/actions-gh-pages@v4
+              with:
+                github_token: ${{ secrets.GITHUB_TOKEN }}
+                publish_dir: ./allure-results
