--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "description": "Modelo de automação simples para exemplo de execução no CI do GitHub Actions",
   "main": "index.js",
-"scripts": {
-   "test": "npx cypress run --browser chrome"
-},
+  "scripts": {
+    "test": "npx cypress run --browser chrome",
+    "report": "allure serve --clean allure-results",
+    "report-ci": "npx allure generate –clean allure-results -o allure-results"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "allure-commandline": "^2.36.0",
     "cypress": "^14.2.1"
+  },
+  "devDependencies": {
+    "allure-cypress": "^3.4.5"
   }
 }
