--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npx cypress run --browser chrome",
     "report": "allure serve --clean allure-results",
-    "report-ci": "npx allure generate -–clean allure-results -o allure-results-ci"
+    "report-ci": "npx allure generate -–clean allure-results -o allure-report"
   },
   "keywords": [],
   "author": "",
